# DSTakeHomeChallenge

./: .gitignore  1_Conversion_Rate.ipynb  1_Conversion_Rate_polars.ipynb  2_Spanish_Translation.ipynb  2_Spanish_Translation_polars.ipynb  3_Employee_Retention.ipynb  3_Employee_Retention_polars.ipynb  4_Identifying_Fraudulent_Activities.ipynb  4_Identifying_Fraudulent_Activities_polars.ipynb  5_Funnel_Analysis.ipynb  5_Funnel_Analysis_polars.ipynb  6_Pricing_Test.ipynb  6_Pricing_Test_polars.ipynb  7_Marketing_Email_Campaign.ipynb  7_Marketing_Email_Campaign_polars.ipynb  8_Song_Challenge.ipynb  main.py  play.ipynb  play_polaris.ipynb  pyproject.toml  util.py
