[project]
name = "dstakehomechallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h2o>=3.46.0.7",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandarallel>=1.6.5",
    "pandas>=2.2.3",
    "polars>=1.29.0",
    "ptpython>=3.0.30",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "setuptools>=80.3.0",
]
